[gd_scene load_steps=13 format=3 uid="uid://dcxf5vokqxhf1"]

[ext_resource type="Script" uid="uid://ckuxbgq0crtpo" path="res://Enemies/BehaviorEnemies/behavior_enemy.gd" id="1_r161w"]
[ext_resource type="Script" uid="uid://tg2toctpffjv" path="res://Enemies/BehaviorEnemies/Enemy_Behaviors/seek_n_ram_behavior.gd" id="2_i1djl"]
[ext_resource type="PackedScene" uid="uid://nft1vef6eakc" path="res://Weapons/BasicWeapon.tscn" id="2_qy6p6"]
[ext_resource type="PackedScene" uid="uid://dbi11henqrl06" path="res://Projectiles/SimpleBullet.tscn" id="3_4inqy"]
[ext_resource type="Script" uid="uid://ch4l8m8r8eo6k" path="res://Enemies/DestroyBehaviors/on_destroy.gd" id="3_pyno2"]
[ext_resource type="Script" uid="uid://bpsr5jgm8t0pg" path="res://Weapons/weapon_stats.gd" id="4_i1djl"]

[sub_resource type="Resource" id="Resource_pyno2"]
script = ExtResource("2_i1djl")
metadata/_custom_type_script = "uid://tg2toctpffjv"

[sub_resource type="Resource" id="Resource_pyyax"]
script = ExtResource("3_pyno2")
metadata/_custom_type_script = "uid://ch4l8m8r8eo6k"

[sub_resource type="SphereShape3D" id="SphereShape3D_chnrf"]
radius = 0.65

[sub_resource type="SphereShape3D" id="SphereShape3D_3ih25"]
radius = 0.75

[sub_resource type="SphereShape3D" id="SphereShape3D_bxkaj"]
radius = 0.55

[sub_resource type="Resource" id="Resource_h1cj6"]
script = ExtResource("4_i1djl")
scale = Vector3(2, 2, 2)
fire_rate = 2.0
damage = 25.0
metadata/_custom_type_script = "uid://bpsr5jgm8t0pg"

[node name="SeekNRam_Cannon" type="CharacterBody3D" groups=["enemies"]]
collision_layer = 768
collision_mask = 16777473
script = ExtResource("1_r161w")
behavior = SubResource("Resource_pyno2")
on_destroy_script = SubResource("Resource_pyyax")

[node name="HitBox" type="Area3D" parent="."]
collision_layer = 256
collision_mask = 65536

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitBox"]
shape = SubResource("SphereShape3D_chnrf")
debug_color = Color(1, 0, 0, 0.69411767)

[node name="HurtBox" type="Area3D" parent="."]
collision_layer = 256
collision_mask = 16842753

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtBox"]
shape = SubResource("SphereShape3D_3ih25")
debug_color = Color(1, 1, 0, 0.2901961)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_bxkaj")

[node name="RotationPivot" type="Node3D" parent="."]

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="RotationPivot"]

[node name="Top" type="CSGBox3D" parent="RotationPivot/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5362071, 0)
size = Vector3(0.2, 0.20527345, 0.2)

[node name="CSGSphere3D" type="CSGSphere3D" parent="RotationPivot/CSGCombiner3D"]

[node name="Weapons" type="Node3D" parent="RotationPivot"]

[node name="Cannon" parent="RotationPivot/Weapons" instance=ExtResource("2_qy6p6")]
base_stat = SubResource("Resource_h1cj6")

[node name="Muzzle" type="Marker3D" parent="RotationPivot/Weapons/Cannon"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.1992855)

[node name="WeaponMesh" type="CSGBox3D" parent="RotationPivot/Weapons/Cannon"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.023935735, -0.65992284)
size = Vector3(0.2, 0.2, 0.44676512)

[node name="StaggerTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="StaggerTimer" to="." method="_on_stagger_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timeout"]
